<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>combined_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dj@todo.todo">dj</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nmea_navsat_driver</depend>
  <depend>witmotion_ros</depend>
  <depend>robot_localization</depend>
  <depend>2023CAPSTONE_AutoCar_in_Ros2-main</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
